--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -114,7 +114,7 @@
     </header>
 
     <div class="clearfix"></div>    
-    
+    <div id="temp" style="display: none; height: 37px;"></div>
     <div class="searchBox" id="searchBox">
       <input class="searchInput" 
       type="text" name="" placeholder="Buscar">
@@ -161,7 +161,7 @@
             alt=""
           />
           <img class="imgsec"
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBSCodqWYLj43tr618tmrBONus0NDNZXtnJiH2EbaJ_RGdUOGApgl18yehSd3seVfBBeE&usqp=CAU"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfhVuf96xnJDYn-UDeKysQFTq5lbLFkMrgvg&usqp=CAU"
             alt=""
           />
         </div>
@@ -227,7 +227,7 @@
         alt=""
       />
       <img class="imgsec"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBSCodqWYLj43tr618tmrBONus0NDNZXtnJiH2EbaJ_RGdUOGApgl18yehSd3seVfBBeE&usqp=CAU"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfhVuf96xnJDYn-UDeKysQFTq5lbLFkMrgvg&usqp=CAU"
         alt=""
       />
     </div>
