--- a/MainPageVendedor/MainVend.html
+++ b/MainPageVendedor/MainVend.html
@@ -148,7 +148,7 @@
       </div> 
   
         <div class="clearfix"></div>
-        
+        <div id="temp" style="display: none; height: 37px;"></div>
         <main>
           <h2>Destacados</h2>
   
@@ -164,7 +164,7 @@
               alt=""
             />
             <img class="imgsec"
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBSCodqWYLj43tr618tmrBONus0NDNZXtnJiH2EbaJ_RGdUOGApgl18yehSd3seVfBBeE&usqp=CAU"
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfhVuf96xnJDYn-UDeKysQFTq5lbLFkMrgvg&usqp=CAU"
               alt=""
             />
           </div>
@@ -230,7 +230,7 @@
           alt=""
         />
         <img class="imgsec"
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBSCodqWYLj43tr618tmrBONus0NDNZXtnJiH2EbaJ_RGdUOGApgl18yehSd3seVfBBeE&usqp=CAU"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfhVuf96xnJDYn-UDeKysQFTq5lbLFkMrgvg&usqp=CAU"
           alt=""
         />
       </div>
