--- a/signup/signup.html
+++ b/signup/signup.html
@@ -20,6 +20,45 @@
       <div class="form-container">
         <form action="#" method="POST" class="form">
           <div class="form-group">
+            <label for="nombre" class="label">Nombre</label>
+            <div class="input-container">
+              <input
+                id="nombre"
+                name="nombre"
+                type="text"
+                required
+                class="input"
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="apellidos" class="label">Apellidos</label>
+            <div class="input-container">
+              <input
+                id="apellidos"
+                name="apellidos"
+                type="text"
+                required
+                class="input"
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="telefono" class="label">Teléfono</label>
+            <div class="input-container">
+              <input
+                id="telefono"
+                name="telefono"
+                type="tel"
+                required
+                class="input"
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
             <label for="email" class="label">Email address</label>
             <div class="input-container">
               <input
