PublicaciónCat's 3rd version
Se agregó en el logo el botón para regresar al inicio

--- a/PublicaciónCategoría/PublicacionCat.html
+++ b/PublicaciónCategoría/PublicacionCat.html
@@ -12,7 +12,9 @@
   <body>
 
     <header>
-        <img id="logop" src="/FOTOSINTEGRADOR/logo-name.png" />
+      <a href="/MainPage/index.html">
+        <button class="BtnLogo"><img id="logo" src="/FOTOSINTEGRADOR/logo-name.png" /></button>
+      </a>
     
         <nav class="menú">
             <ul>
@@ -23,10 +25,10 @@
                         <button>Publicaciones</button>
                         <div class="categorias-lista" id="publicacionesLista">
                             <ul>
-                                <li><button>*Arquitectura</button></li>
-                                <li><button>*Carpintería</button></li>
-                                <li><button>*Interiores</button></li>
-                                <li><button>*Moda</button></li>
+                                <li><button>Arquitectura</button></li>
+                                <li><button>Carpintería</button></li>
+                                <li><button>Interiores</button></li>
+                                <li><button>Moda</button></li>
                             </ul>
                         </div>
                     </li>
@@ -34,10 +36,10 @@
                         <button>Vendedores</button>
                         <div class="categorias-lista" id="vendedoresLista">
                             <ul>
-                                <li><button>*Arquitectura</button></li>
-                                <li><button>*Carpintería</button></li>
-                                <li><button>*Interiores</button></li>
-                                <li><button>*Moda</button></li>
+                                <li><button>Arquitectura</button></li>
+                                <li><button>Carpintería</button></li>
+                                <li><button>Interiores</button></li>
+                                <li><button>Moda</button></li>
                             </ul>
                         </div>
                     </li>
