PublicacionCatUser's 2nd version
Se agregó en el logo el botón para regresar al inicio

--- a/PublicaciónCategoríaUser/PublicaciónCatUser.html
+++ b/PublicaciónCategoríaUser/PublicaciónCatUser.html
@@ -12,7 +12,9 @@
   <body>
 
     <header>
-        <img id="logop" src="/FOTOSINTEGRADOR/logo-name.png" />
+      <a href="/MainPageUser/MainUser.html">
+        <button class="BtnLogo"><img id="logo" src="/FOTOSINTEGRADOR/logo-name.png" /></button>
+      </a>
     
         <nav class="menú">
             <ul>
