--- a/VendedorCategoríaUser/VendedorCatUser.html
+++ b/VendedorCategoríaUser/VendedorCatUser.html
@@ -12,7 +12,9 @@
   <body>
 
     <header>
-        <img id="logop" src="/FOTOSINTEGRADOR/logo-name.png" />
+      <a href="/MainPageUser/MainUser.html">
+        <button class="BtnLogo"><img id="logo" src="/FOTOSINTEGRADOR/logo-name.png" /></button>
+      </a>
     
         <nav class="menú">
             <ul>
