--- a/VendedorCategoríaVend/VendedorCatVend.html
+++ b/VendedorCategoríaVend/VendedorCatVend.html
@@ -12,7 +12,9 @@
   <body>
 
     <header>
-        <img id="logop" src="/FOTOSINTEGRADOR/logo-name.png" />
+      <a href="/MainPageVendedor/MainVend.html">
+        <button class="BtnLogo"><img id="logo" src="/FOTOSINTEGRADOR/logo-name.png" /></button>
+      </a>
     
         <nav class="menú">
             <ul>
