--- a/PerfilPublicoUser/PerfilUsuario.html
+++ b/PerfilPublicoUser/PerfilUsuario.html
@@ -10,21 +10,17 @@
     <body>
       <body style="background-image: url(FONDO.png);">
       <header class="flex justify-center">
-          <img src="logo-name.png" class="h-20 self-center" alt="">
+          <a href="#"><img src="logo-name.png" class="h-20 self-center" alt=""></a>
       </header>	
 
-      <div class="max-w-lg mx-auto my-10 bg-[#13253d] rounded-lg shadow-md p-5">
-        <img class="w-32 h-32 rounded-full mx-auto" src="Profile.png" alt="">
+      <div class="max-w-lg mx-auto my-10 bg-[#010b14] rounded-lg shadow-md p-5">
+        <img class="w-32 h-32 rounded-full mx-auto bg-[#0a1319]" src="Profile.png" alt="">
         <h2 class="text-center text-white text-2xl font-semibold mt-3">John Doe</h2>
-        <p class="text-center text-gray-500 mt-1">Vendedor / Usuario</p>
+        
         <div class="flex justify-center mt-5">
-          <button href="#" class="middle none center 
-          rounded-lg bg-[#031828] 
-          py-3 px-6 
-          font-sans text-xs font-bold uppercase text-white 
-          shadow-md shadow-[#121e25] 
-          transition-all hover:shadow-lg 
-          hover:shadow-[#13253d] focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mx-3">Reportar</button>
+          <button href="#" class="bg-[#010b14] text-gray-600 py-2 px-4 rounded-md shadow-md shadow-[#121e25] transition-all 
+          hover:shadow-lg hover:bg-[#010e17] hover:shadow-[#13253d] hover:text-white focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] 
+          active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mx-3">Reportar</button>
         </div>
         
       </div>
