--- a/MisTarjetas/AGREGAR TAR.html
+++ b/MisTarjetas/AGREGAR TAR.html
@@ -6,15 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="./assets/styles/styles.css" /> -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://unpkg.com/alpinejs@3.2.2/dist/cdn.min.js"></script>
     <body>
-      <body style="background-color:#0A1319;">
-      <header class="flex bg-slate-800 justify-center">
-          <img src="udeslogo.png" class="h-20 self-center" alt="">
-          
-          
-      </header>	
+      <body style="background-image: url(FONDO.png);">
+        <header class="flex justify-center">
+          <a href="#"><img src="logo-name.png" class="h-20 self-center" alt=""></a>
+      </header>		
       <style>
         .form-select {
           background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%239ca3af' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
@@ -52,9 +50,9 @@
         }
       </style>
     </head>
-    <body class="bg-blue-50">
+    <body class="bg[-blue-50]">
       <div class="m-4">
-        <div class="credit-card w-full sm:w-auto shadow-lg mx-auto rounded-xl bg-white" x-data="creditCard">
+        <div class="credit-card w-full sm:w-auto shadow-lg mx-auto rounded-xl bg-[#031828]" x-data="creditCard">
           <header class="flex flex-col justify-center items-center">
             <div
               class="relative"
@@ -110,7 +108,7 @@
               <div class="my-3">
                 <input
                   type="text"
-                  class="block w-full px-5 py-2 border rounded-lg bg-white shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
+                  class="block w-full px-5 py-2 border rounded-lg bg-[#6b7280] shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
                   placeholder="Card holder"
                   maxlength="22"
                   x-model="cardholder"
@@ -119,7 +117,7 @@
               <div class="my-3">
                 <input
                   type="text"
-                  class="block w-full px-5 py-2 border rounded-lg bg-white shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
+                  class="block w-full px-5 py-2 border rounded-lg bg-[#6b7280] shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
                   placeholder="Card number"
                   x-model="cardNumber"
                   x-on:keydown="format()"
@@ -135,7 +133,7 @@
                   <select
                     name=""
                     id=""
-                    class="form-select appearance-none block w-full px-5 py-2 border rounded-lg bg-white shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
+                    class="form-select appearance-none block w-full px-5 py-2 border rounded-lg bg-[#6b7280] shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
                     x-model="expired.month"
                   >
                     <option value="" selected disabled>MM</option>
@@ -155,7 +153,7 @@
                   <select
                     name=""
                     id=""
-                    class="form-select appearance-none block w-full px-5 py-2 border rounded-lg bg-white shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
+                    class="form-select appearance-none block w-full px-5 py-2 border rounded-lg bg-[#6b7280] shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
                     x-model="expired.year"
                   >
                     <option value="" selected disabled>YY</option>
@@ -168,7 +166,7 @@
                   </select>
                   <input
                     type="text"
-                    class="block w-full col-span-2 px-5 py-2 border rounded-lg bg-white shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
+                    class="block w-full col-span-2 px-5 py-2 border rounded-lg bg-[#6b7280] shadow-lg placeholder-gray-400 text-gray-700 focus:ring focus:outline-none"
                     placeholder="Security code"
                     maxlength="3"
                     x-model="securityCode"
