--- a/Historial de compras o ventas/Historial.html
+++ b/Historial de compras o ventas/Historial.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Historial.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="HistorialMDT.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
 
@@ -28,7 +29,6 @@
         </section>
 
         <section class="publicaciones">
-
           <div class="publicacion">
             <img class="imgprin"
               src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIaDGrW44yiZFBaLk7b5I_G6GpTN6zZ61XxQ&usqp=CAU"
@@ -44,12 +44,15 @@
               alt=""
             />
           </div>
-            <p class="descripcion">
-              Title: Vestido
-              <br />
-              Descripcion: Vestido estilo contemporaneo, inspirado en ...
+          <div class="infopubli">
+            <p class="titulop">
+              Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
             </p>
-        </div>
+            <p class="descripcionp">
+              Descripcion: Vestido estilo contemporaneo, inspirado en
+            </p>
+          </div>
+        </div> 
   
         <div class="publicacion">
           <img class="imgprin"
@@ -66,11 +69,14 @@
             alt=""
           />
         </div>
-          <p class="descripcion">
-            Title: Vestido
-            <br />
-            Descripcion: Vestido estilo contemporaneo, inspirado en ...
+        <div class="infopubli">
+          <p class="titulop">
+            Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
           </p>
+          <p class="descripcionp">
+            Descripcion: Vestido estilo contemporaneo, inspirado en
+          </p>
+        </div>
       </div>
   
         <div class="publicacion">
@@ -88,11 +94,14 @@
             alt=""
           />
         </div>
-          <p class="descripcion">
-            Title: Vestido
-            <br />
-            Descripcion: Vestido estilo contemporaneo, inspirado en ...
+        <div class="infopubli">
+          <p class="titulop">
+            Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
           </p>
+          <p class="descripcionp">
+            Descripcion: Vestido estilo contemporaneo, inspirado en
+          </p>
+        </div>
       </div>
   
       <div class="publicacion">
@@ -110,11 +119,14 @@
           alt=""
         />
       </div>
-        <p class="descripcion">
-          Title: Vestido
-          <br />
-          Descripcion: Vestido estilo contemporaneo, inspirado en ...
+      <div class="infopubli">
+        <p class="titulop">
+          Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
         </p>
+        <p class="descripcionp">
+          Descripcion: Vestido estilo contemporaneo, inspirado en
+        </p>
+      </div>
     </div>
       </section>
     </main>
