Publicación Categoría's 4th version
Se hicieron los ajustes necesarios para hacer la página responsive

--- a/PublicaciónCategoría/PublicacionCat.html
+++ b/PublicaciónCategoría/PublicacionCat.html
@@ -7,12 +7,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="PublicaciónCat.css">
     <script src="PublicaciónCat.js"></script>
+    <script src="PublicaciónCatMDT.js"></script>
     <title>Publicación Categoría</title>
   </head>
   <body>
 
+
     <header>
-      <a href="/MainPage/index.html">
+      <a class="UDESEV" href="/MainPageVendedor/MainVend.html">
         <button class="BtnLogo"><img id="logo" src="/FOTOSINTEGRADOR/logo-name.png" /></button>
       </a>
     
@@ -71,7 +73,7 @@
     </header>
 
     <main>   
-    <div id="temp" style="display: none; height: 37px;"></div>
+    <div id="temp" style="display: none; height: 58px;"></div>
     <div class="searchBox" id="searchBox">
       <input class="searchInput" 
       type="text" name="" placeholder="Buscar">
@@ -119,12 +121,15 @@
           alt=""
         />
       </div>
-        <p class="descripcion">
-          Title: Vestido
-          <br />
-          Descripcion: Vestido estilo contemporaneo, inspirado en ...
+      <div class="infopubli">
+        <p class="titulop">
+          Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
         </p>
-    </div>
+        <p class="descripcionp">
+          Descripcion: Vestido estilo contemporaneo, inspirado en
+        </p>
+      </div>
+    </div> 
 
     <div class="publicacion">
       <img class="imgprin"
@@ -141,11 +146,14 @@
         alt=""
       />
     </div>
-      <p class="descripcion">
-        Title: Vestido
-        <br />
-        Descripcion: Vestido estilo contemporaneo, inspirado en ...
+    <div class="infopubli">
+      <p class="titulop">
+        Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
       </p>
+      <p class="descripcionp">
+        Descripcion: Vestido estilo contemporaneo, inspirado en
+      </p>
+    </div>
   </div>
 
     <div class="publicacion">
@@ -163,11 +171,14 @@
         alt=""
       />
     </div>
-      <p class="descripcion">
-        Title: Vestido
-        <br />
-        Descripcion: Vestido estilo contemporaneo, inspirado en ...
+    <div class="infopubli">
+      <p class="titulop">
+        Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
       </p>
+      <p class="descripcionp">
+        Descripcion: Vestido estilo contemporaneo, inspirado en
+      </p>
+    </div>
   </div>
 
   <div class="publicacion">
@@ -185,11 +196,14 @@
       alt=""
     />
   </div>
-    <p class="descripcion">
-      Title: Vestido
-      <br />
-      Descripcion: Vestido estilo contemporaneo, inspirado en ...
+  <div class="infopubli">
+    <p class="titulop">
+      Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
     </p>
+    <p class="descripcionp">
+      Descripcion: Vestido estilo contemporaneo, inspirado en
+    </p>
+  </div>
 </div>
   </section>
     </main>
