--- a/VendedorCategoría/VendedorCat.html
+++ b/VendedorCategoría/VendedorCat.html
@@ -12,7 +12,7 @@
   <body>
 
     <header>
-      <a href="/MainPage/index.html">
+      <a class="UDESEV" href="/MainPageVendedor/MainVend.html">
         <button class="BtnLogo"><img id="logo" src="/FOTOSINTEGRADOR/logo-name.png" /></button>
       </a>
     
@@ -71,7 +71,7 @@
     </header>
 
     <main>   
-    <div id="temp" style="display: none; height: 37px;"></div>
+    <div id="temp" style="display: none; height: 58px;"></div>
     <div class="searchBox" id="searchBox">
       <input class="searchInput" 
       type="text" name="" placeholder="Buscar">
@@ -111,7 +111,7 @@
           alt=""
           >
           <img class="calificacion" 
-          src="/FOTOSINTEGRADOR/CALIFI4.png" 
+          src="/FOTOSINTEGRADOR/CALIFI5.png" 
           alt=""
           >
         </div>
@@ -162,7 +162,7 @@
           alt=""
           >
           <img class="calificacion" 
-          src="/FOTOSINTEGRADOR/CALIFI1.png" 
+          src="/FOTOSINTEGRADOR/CALIFI5.png" 
           alt=""
           >
         </div>
