Vendedor Categoría Vendedor's 3rd version
Se hicieron los arreglos correspondientes para hacer responsiva la página

--- a/VendedorCategoríaVend/VendedorCatVend.html
+++ b/VendedorCategoríaVend/VendedorCatVend.html
@@ -12,7 +12,7 @@
   <body>
 
     <header>
-      <a href="/MainPageVendedor/MainVend.html">
+      <a class="UDESEV" href="/MainPageVendedor/MainVend.html">
         <button class="BtnLogo"><img id="logo" src="/FOTOSINTEGRADOR/logo-name.png" /></button>
       </a>
     
@@ -75,7 +75,7 @@
     </header>
 
     <main>   
-    <div id="temp" style="display: none; height: 37px;"></div>
+    <div id="temp" style="display: none; height: 58px;"></div>
     <div class="searchBox" id="searchBox">
       <input class="searchInput" 
       type="text" name="" placeholder="Buscar">
