--- a/Perfil Publico Vendedor/perfilpublicovendedor.html
+++ b/Perfil Publico Vendedor/perfilpublicovendedor.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="perfilpublicovendedor.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="perfilpublicovendedorMDT.js"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
 
@@ -57,94 +58,106 @@
       </section>
 
      <section class="publicaciones">
-        <div class="publicacion">
-          <img class="imgprin"
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIaDGrW44yiZFBaLk7b5I_G6GpTN6zZ61XxQ&usqp=CAU"
-            alt=""
-          >
-          <div class="secundaries">
-          <img class="imgsec"
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsDMUEsrxYdco7F3mkwqNJn-5x-6Rv4DmjgASkeFj1BLQJANZy5XGysPLXb9C6t-L2XSU&usqp=CAU"
-            alt=""
-          />
-          <img class="imgsec"
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfhVuf96xnJDYn-UDeKysQFTq5lbLFkMrgvg&usqp=CAU"
-            alt=""
-          />
-        </div>
-          <p class="descripcion">
-            Title: Vestido
-            <br />
-            Descripcion: Vestido estilo contemporaneo, inspirado en ...
-          </p>
-      </div>
-
       <div class="publicacion">
         <img class="imgprin"
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTg6DC7eJwFSwtZcokEOsbzN0CheAFwAMuNrYnW-_fB9lhjWihN5vkg2VJsvCFrm92y8w4&usqp=CAU"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIaDGrW44yiZFBaLk7b5I_G6GpTN6zZ61XxQ&usqp=CAU"
           alt=""
         >
         <div class="secundaries">
         <img class="imgsec"
-          src="https://image.winudf.com/v2/image1/Y29tLmJ1Z2hhdHMuRHJhd2luZ0Zhc2hpb25DbG90aGVzRGVzaWduX3NjcmVlbl80XzE1NDIzOTM0MTJfMDk3/screen-4.jpg?fakeurl=1&type=.webp"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsDMUEsrxYdco7F3mkwqNJn-5x-6Rv4DmjgASkeFj1BLQJANZy5XGysPLXb9C6t-L2XSU&usqp=CAU"
           alt=""
         />
         <img class="imgsec"
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbBALp69ozg1O-YPQJFyl7W66c0AbsVpfRKhsW6sjx_7Tw7csm-ySKjQfMZJjw2IszVy8&usqp=CAU"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfhVuf96xnJDYn-UDeKysQFTq5lbLFkMrgvg&usqp=CAU"
           alt=""
         />
       </div>
-        <p class="descripcion">
-          Title: Vestido
-          <br />
-          Descripcion: Vestido estilo contemporaneo, inspirado en ...
+      <div class="infopubli">
+        <p class="titulop">
+          Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
         </p>
-    </div>
-
-      <div class="publicacion">
-        <img class="imgprin"
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTg6DC7eJwFSwtZcokEOsbzN0CheAFwAMuNrYnW-_fB9lhjWihN5vkg2VJsvCFrm92y8w4&usqp=CAU"
-          alt=""
-        >
-        <div class="secundaries">
-        <img class="imgsec"
-          src="https://image.winudf.com/v2/image1/Y29tLmJ1Z2hhdHMuRHJhd2luZ0Zhc2hpb25DbG90aGVzRGVzaWduX3NjcmVlbl80XzE1NDIzOTM0MTJfMDk3/screen-4.jpg?fakeurl=1&type=.webp"
-          alt=""
-        />
-        <img class="imgsec"
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbBALp69ozg1O-YPQJFyl7W66c0AbsVpfRKhsW6sjx_7Tw7csm-ySKjQfMZJjw2IszVy8&usqp=CAU"
-          alt=""
-        />
+        <p class="descripcionp">
+          Descripcion: Vestido estilo contemporaneo, inspirado en
+        </p>
       </div>
-        <p class="descripcion">
-          Title: Vestido
-          <br />
-          Descripcion: Vestido estilo contemporaneo, inspirado en ...
-        </p>
-    </div>
+    </div> 
 
     <div class="publicacion">
       <img class="imgprin"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIaDGrW44yiZFBaLk7b5I_G6GpTN6zZ61XxQ&usqp=CAU"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTg6DC7eJwFSwtZcokEOsbzN0CheAFwAMuNrYnW-_fB9lhjWihN5vkg2VJsvCFrm92y8w4&usqp=CAU"
         alt=""
       >
       <div class="secundaries">
       <img class="imgsec"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsDMUEsrxYdco7F3mkwqNJn-5x-6Rv4DmjgASkeFj1BLQJANZy5XGysPLXb9C6t-L2XSU&usqp=CAU"
+        src="https://image.winudf.com/v2/image1/Y29tLmJ1Z2hhdHMuRHJhd2luZ0Zhc2hpb25DbG90aGVzRGVzaWduX3NjcmVlbl80XzE1NDIzOTM0MTJfMDk3/screen-4.jpg?fakeurl=1&type=.webp"
         alt=""
       />
       <img class="imgsec"
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfhVuf96xnJDYn-UDeKysQFTq5lbLFkMrgvg&usqp=CAU"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbBALp69ozg1O-YPQJFyl7W66c0AbsVpfRKhsW6sjx_7Tw7csm-ySKjQfMZJjw2IszVy8&usqp=CAU"
         alt=""
       />
     </div>
-      <p class="descripcion">
-        Title: Vestido
-        <br />
-        Descripcion: Vestido estilo contemporaneo, inspirado en ...
+    <div class="infopubli">
+      <p class="titulop">
+        Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
       </p>
+      <p class="descripcionp">
+        Descripcion: Vestido estilo contemporaneo, inspirado en
+      </p>
+    </div>
   </div>
-    </section>
+
+    <div class="publicacion">
+      <img class="imgprin"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTg6DC7eJwFSwtZcokEOsbzN0CheAFwAMuNrYnW-_fB9lhjWihN5vkg2VJsvCFrm92y8w4&usqp=CAU"
+        alt=""
+      >
+      <div class="secundaries">
+      <img class="imgsec"
+        src="https://image.winudf.com/v2/image1/Y29tLmJ1Z2hhdHMuRHJhd2luZ0Zhc2hpb25DbG90aGVzRGVzaWduX3NjcmVlbl80XzE1NDIzOTM0MTJfMDk3/screen-4.jpg?fakeurl=1&type=.webp"
+        alt=""
+      />
+      <img class="imgsec"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbBALp69ozg1O-YPQJFyl7W66c0AbsVpfRKhsW6sjx_7Tw7csm-ySKjQfMZJjw2IszVy8&usqp=CAU"
+        alt=""
+      />
+    </div>
+    <div class="infopubli">
+      <p class="titulop">
+        Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
+      </p>
+      <p class="descripcionp">
+        Descripcion: Vestido estilo contemporaneo, inspirado en
+      </p>
+    </div>
+  </div>
+
+  <div class="publicacion">
+    <img class="imgprin"
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIaDGrW44yiZFBaLk7b5I_G6GpTN6zZ61XxQ&usqp=CAU"
+      alt=""
+    >
+    <div class="secundaries">
+    <img class="imgsec"
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsDMUEsrxYdco7F3mkwqNJn-5x-6Rv4DmjgASkeFj1BLQJANZy5XGysPLXb9C6t-L2XSU&usqp=CAU"
+      alt=""
+    />
+    <img class="imgsec"
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfhVuf96xnJDYn-UDeKysQFTq5lbLFkMrgvg&usqp=CAU"
+      alt=""
+    />
+  </div>
+  <div class="infopubli">
+    <p class="titulop">
+      Title: Vestido jhgduhwefjehfiuhe iuehfiuehf eifiuehf iuehfuevf iuehfiuehgf jkehfuhefoiughuhf iuehfihef iuehfuih ehfihf iehfiuhf kjehfhefu
+    </p>
+    <p class="descripcionp">
+      Descripcion: Vestido estilo contemporaneo, inspirado en
+    </p>
+  </div>
+</div>
+  </section>
     </main>
   </body>
 </html>
