--- a/aboutus/aboutus2.html
+++ b/aboutus/aboutus2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, inicial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,7 +14,7 @@
         font-family: "Poppins", sans-serif;
         margin: 0;
         padding: 0;
-        background-image: url("/aboutus/img/fondo.png");
+        background-image: url("/aboutus/aboutus/img/fondo.png");
         display: flex;
         flex-direction: column;
         min-height: 100vh;
@@ -28,7 +29,7 @@
       }
 
       .imgleft {
-        width: 50px;
+        width: 80px;
       }
 
       .left-header {
@@ -38,6 +39,9 @@
         padding-left: 20px;
         padding-right: 20px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        display: flex;
+        align-items: center;
+        gap: 3rem;
       }
 
       .right-header {
@@ -46,12 +50,19 @@
         padding: 10px;
         padding-left: 20px;
         padding-right: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       .container {
         max-height: 50%;
         flex: 1;
         display: flex;
+      }
+
+      .acercadenosotros {
+        display: none;
       }
 
       .left-column {
@@ -82,12 +93,103 @@
         font-size: 16px;
         color: #666;
       }
+      @media only screen and (max-width: 1000px) {
+        body {
+          font-family: "Poppins", sans-serif;
+          margin: 0;
+          padding: 0;
+          background-image: url("/aboutus/aboutus/img/fondo.png");
+          display: flex;
+          flex-direction: column;
+          min-height: 100vh;
+        }
+
+        header {
+          font-size: 10px;
+          display: flex;
+          background-image: url("/aboutus/img/fondo.png");
+          color: #fff;
+          text-align: center;
+        }
+
+        .imgleft {
+          width: 50px;
+        }
+
+        .left-header {
+          background-image: url("/aboutus/img/fondo.png");
+          flex: 1;
+          padding: 10px;
+          padding-left: 20px;
+          padding-right: 20px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+          display: flex;
+          align-items: center;
+          gap: 3rem;
+        }
+
+        .right-header {
+          background-image: url("/aboutus/img/fondo.png");
+          flex: 2;
+          padding: 10px;
+          padding-left: 20px;
+          padding-right: 20px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          display: none;
+        }
+
+        .container {
+          max-height: 50%;
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+        }
+
+        .acercadenosotros {
+          display: block;
+          font: "Poppins";
+          font-size: 2em;
+        }
+
+        .left-column {
+          height: 650px;
+          overflow-y: scroll;
+          text-align: justify;
+          flex: 1;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+
+        .right-column {
+          height: 650px;
+          overflow-y: scroll;
+          text-align: justify;
+          flex: 2;
+
+          padding-left: 20px;
+          padding-right: 20px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+          color: #fff;
+        }
+
+        p {
+          font-size: 16px;
+          color: #666;
+        }
+      }
     </style>
   </head>
   <body>
     <header>
       <div class="left-header">
-        <img class="imgleft" src="/aboutus/img/logo.png" alt="" />
+        <a href="/">
+          <img class="imgleft" src="/aboutus/aboutus/img/logo.png" alt="" />
+        </a>
         <h1>Términos y Condiciones</h1>
       </div>
       <div class="right-header">
@@ -178,6 +280,9 @@
         </p>
       </div>
       <div class="right-column">
+        <div>
+          <h1 class="acercadenosotros">Acerca de nosotros</h1>
+        </div>
         <p>
           Somos una empresa de diseño web que aprovecha el poder de la
           tecnología digital para transformar visiones creativas en
